Fixed logos overflow

--- a/front-end/src/components/Header/Header.scss
+++ b/front-end/src/components/Header/Header.scss
@@ -78,6 +78,11 @@
       color: #caa79e;
     }
   }
+
+  &--sign {
+    position: relative;
+    left: -100px;
+  }
 }
 
 .sign-in {
